[metadata]
name = django-markup
version = 1.4a0
description = A generic Django application to convert text with specific markup to html.
long_description = file: README.rst, CHANGELOG.rst
author = Martin Mahner
author_email = martin@mahner.org
url = https://github.com/bartTC/django-markup
keywords = django, markup, markdown, restructuredtext, format, text
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django>=1.11
    six

[options.extras_require]
all_filter_dependencies =
    textile>=2.3.16
    smartypants>=2.0.0
    docutils>=0.14
    pygments>=2.2.0
    markdown>=2.6.9
    bleach>=3.0
    bleach-whitelist>=0.0.9
    python-creole>=1.3.1
    pygments>=2.2.0

[isort]
default_section = THIRDPARTY
known_first_party = django_markup
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip = migrations

[coverage:run]
source = django_markup
branch = True
omit =
    django_markup/tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__

[coverage:html]
directory = /tmp/coverage_report/django_markup
