[metadata]
name = django-markup
version = 1.7.2
description = A generic Django application to convert text with specific markup to html.
long_description = file: README.rst, CHANGELOG.rst
author = Martin Mahner
author_email = martin@mahner.org
url = https://github.com/bartTC/django-markup
keywords = django, markup, markdown, restructuredtext, format, text
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django>=3.2

[options.extras_require]
all_filter_dependencies =
    textile>=2.3.16
    smartypants>=2.0.0
    docutils>=0.14
    pygments>=2.2.0
    markdown>=2.6.9
    bleach>=3.0
    python-creole>=1.3.1
    pygments>=2.10.0
